test/docs-doctest/fixtures/tutorial-nonexhaustive.stderr
fixtures/tutorial-nonexhaustive.jac:1:17-18: error[E0813]: this match is not exhaustive: it misses false
  hint: add a clause matching the witness, or a (pwild) default
