test/docs-doctest/fixtures/tutorial-nonexhaustive.jac
fn (b) -> match b {
  | True -> 0
}
